# asm6502

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: render.asm
src/: assemble.rs  assembler.rs  ast.rs  codegen.rs  error.rs  instruction.rs  lex.rs  lexer.rs  main.rs  parse.rs  semantic.rs
